=== 0.0.5 (May 19, 2010)

* fixed inconsistent ghostscript failure [#ngty]
* added examples demostrating clamsy in action [#ngty]
* fixed subtle bugs in multi-printer support in configuration & major cleaning up of configuration spec [#ngty]
* enhanced bundled configuration support such that it is platform specific (currently only linux & mac are
  supported though) [#ngty]
* added new printer 'jod_converter', which is now the default printer (since it has higher chance of working
  out of the box, as compared to the more-tedious-to-setup 'cups_pdf' printer) [#ngty]

=== 0.0.4 (May 04, 2010)

* fixed bug in multiple pictures replacement [#ngty]
* support for configuring clamsy (see README section 3) [#jasonong & #ngty]
* clamsy now has a logo (<PROJECT_ROOT>/clamsy.png) [#zhenyi]
* well-prepared for alternative printers support [#ngty]

=== 0.0.3 (Apr 25, 2010)

* support to replace pictures (useful for inserting digital signatures) [#ngty]

=== 0.0.2 (Apr 22, 2010)

= 2nd official (yet still as embarrassing) release

* instead of using system ps2pdf & pdf2ps commands, we use rghost gem to take care of ps/pdf conversions [#ngty]

=== 0.0.1 (Apr 21, 2010)

= 1st official (yet embarrassing) release

* support to generate a single pdf from multiple contexts using a single odt template [#ngty]
